# CunninghamWorker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/cunninghamworker/: __init__.py  __main__.py
src/cunninghamworker/bll/: __init__.py  concurrent_job_pool.py  config.py  db_backed_session_tracker.py  exceptions.py  interfaces.py  job_processor.py  session_tracker.py
src/cunninghamworker/domain/: entities.py  exceptions.py
src/cunninghamworker/infrastructure/: core_api_reporter.py  logging.py  rabbitmq_consumer.py  telethon_executor.py
tests/: test_domain.py  test_e2e_concurrent.py
